SERVER-48742 Log whenever profiler settings are changed via setProfilingLevel

(cherry picked from commit e7df7aee5095174712f8b73ac2fa4c8d6afa0293)